--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "database": "workspace:*",
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
